<resources>
    <string name="app_name">SYNC App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    
    <!-- Drawer strings -->
    <string name="drawer_dashboard">Dashboard</string>
    <string name="drawer_statistics">Statistics</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>
    
    <!-- Dashboard strings -->
    <string name="dash_sleep_title">Sleep Duration</string>
    <string name="dash_sleep_default">No data received</string>
    <string name="dash_co2_title">CO2</string>
    <string name="dash_co2_default">No data received</string>
    <string name="dash_temp_title">Temperature</string>
    <string name="dash_temp_default">No data received</string>
    <string name="dash_light_title">Light Intensity</string>
    <string name="dash_light_default">No data received</string>
    <string name="dash_humidity_title">Humidity</string>
    <string name="dash_humidity_default">No data received</string>
    
    <!-- Add User strings -->
    <string name="add_user">Add User</string>
    <string name="name">Name:</string>
    <string name="room">Room:</string>
    <string name="add">Add</string>

    <!-- Add Fitbit strings -->
    <string name="add_fitbit">Add Fitbit</string>
    <string name="add_sensor_fitbit">Authenticate FitBit</string>

    <!-- Add Environmental Sensor strings -->
    <string name="add_esensor">Add Environmental Sensor</string>
    <string name="add_esensor_type_title">Type</string>
    <string name="add_esensor_name_title">Name</string>
    <string name="add_esensor_device_id_title">Device ID</string>
    <string name="add_esensor_room_title">Room</string>
    <array name="add_sensor_types">
        <item>Aeon</item>
        <item>Yoctopuce</item>
    </array>
    
    <!-- Add Room strings -->
    <string name="add_room">Add Room</string>
    <string name="room_type_title">Room Type</string>
    <string name="room_desc_title">Description</string>
    <string name="room_person_title">Person</string>

    <!-- Add Person strings -->
    <string name="add_person">Add Person</string>
    <string name="person_name">Name</string>
    <string name="person_room">Room</string>
    
    <!-- Statistics strings -->
    <string name="toggle_co2">CO2</string>
    <string name="toggle_temp">Temp</string>
    <string name="toggle_light">Light</string>
    <string name="days"># days to show</string>
    <string-array name="day_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    
    <!-- People strings -->
    <string name="people">People</string>
    <string name="peopleAccount">People on your account</string>
    
    <!-- Rooms strings -->
    <string name="rooms">Rooms</string>
    <string name="roomsAccount">Rooms on your account</string>
    
    <!-- ESensors strings -->
    <string name="esensors">Environmental Sensors</string>
    <string name="esensorsAccount"> Sensors on your account</string>
    
    <!-- PSensors strings -->
    <string name="psensors">Personal Sensors</string>
    <string name="psensorsAccount">Sensors on you account</string>

    <string name="title_activity_add_user">Add User</string>
    <string name="title_activity_add_room">Add Room</string>
    <string name="title_activity_add_sensor">Add Sensor</string>
    <string name="title_activity_add_person">Add Person</string>
    <string name="title_activity_add_esensor">Add Environmental Sensor</string>
    <string name="title_activity_people">People</string>
    <string name="title_activity_rooms">Rooms</string>
    <string name="title_activity_esensors">Environmental Sensors</string>
    <string name="title_activity_psensors">Personal Sensors</string>
</resources>
