<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sync.syncapp.activities.AddESensorActivity">

    <LinearLayout
        android:id="@+id/add_esensor_type_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:text="@string/add_esensor_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/add_esensor_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/add_sensor_types"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_esensor_name_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_esensor_type_layout"
        android:layout_marginTop="25dp">

        <TextView
            android:text="@string/add_esensor_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/add_esensor_name"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_esensor_device_id_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_esensor_name_layout"
        android:layout_marginTop="25dp">

        <TextView
            android:text="@string/add_esensor_device_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/add_esensor_device_id"
            android:inputType="text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_esensor_room_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_esensor_device_id_layout"
        android:layout_marginTop="25dp">

        <TextView
            android:text="@string/add_esensor_room_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/add_esensor_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/add_sensor_types"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <Button
        android:id="@+id/add_esensor_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_below="@id/add_esensor_room_layout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/add_esensor_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>
