<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    
    <LinearLayout
        android:id="@+id/stats_checkbox_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp" >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_co2"
            android:id="@+id/stats_toggle_co2"
            android:checked="false" />

        <!--android:layout_marginTop="37dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_temp"
            android:id="@+id/stats_toggle_temp"
            android:checked="false" />

        <!--android:layout_alignTop="@+id/stats_toggle_co2"-->
        <!--android:layout_toRightOf="@+id/stats_toggle_co2"-->
        <!--android:layout_toEndOf="@+id/stats_toggle_co2"-->

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_light"
            android:id="@+id/stats_toggle_light"
            android:checked="false" />

        <!--android:layout_alignTop="@+id/stats_toggle_temp"-->
        <!--android:layout_toRightOf="@+id/stats_toggle_temp"-->
        <!--android:layout_toEndOf="@+id/stats_toggle_temp"-->
    </LinearLayout>

    

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/stats_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/stats_checkbox_layout"/>
</RelativeLayout>